fix overflow on loooong action lines, issue #8

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,8 +130,8 @@ div.rooms {
 }
 
 .log .what .action {
-    width: 100%;
-    padding-left: 7em;
+    width: 85%;
+    padding-left: 15%;
 }
 
 
